Aim & total defense

--- a/templates/defenseChooser.hbs
+++ b/templates/defenseChooser.hbs
@@ -1,5 +1,5 @@
 <div>
-  <div>¡Te están atacando! Elige tu defensa!</div>
+  <div>You are attacked! Choose defense to use.</div>
   <table>
     <tr class="clickable" id="dodge">
       <td>dodge</td>
