--- a/src/templates/maneuverChooser.hbs
+++ b/src/templates/maneuverChooser.hbs
@@ -1,4 +1,4 @@
 <div>
-  <div>Choose your maneuver for this turn.</div>
+  <div>Escoge tu maniobra para este turno.</div>
   {{> choiceTable}}
 </div>
