--- a/src/templates/defenseChooser.hbs
+++ b/src/templates/defenseChooser.hbs
@@ -1,5 +1,13 @@
 <div>
   <div>¡Te están atacando! Elige tu defensa!</div>
+
+  <table>
+    <tr>
+      <td><input type="checkbox" id="retreat"/>Retroceder</td>
+      <td>Retrocedes un paso y ganas un +3 a Esquivar (o un +1 a Parar y Bloquear). Tendrás un -2 al Ataque en el próximo turno</td>
+    </tr>
+  </table>
+
   <table>
     <tr class="clickable" id="dodge">
       <td>dodge</td>
