--- a/src/templates/attackChooser.hbs
+++ b/src/templates/attackChooser.hbs
@@ -2,9 +2,14 @@
   <div>Escoge ataque (tienes que tener seleccionado un objetivo)</div>
 
   <div><input type="checkbox" id="keepOpen" {{#if data.keepOpen}}checked{{/if}}><label for="keepOpen">keep window open after attack</label></div>
+  {{#if counterAttack.items.length}}
+    <h2>Contraataque</h2>
+    <p>Un contraataque exitoso penalizará la parada del contrincante en -2</p>
+    {{> choiceTable counterAttack}}
+  {{/if}}
   <h2>Melee</h2>
   {{> choiceTable melee}}
-  <h2>Ranged</h2>
+  <h2>A distancia</h2>
   {{> choiceTable ranged}}
 
   {{> choiceTable hitLocations}}
