Return to start && change posture

--- a/src/templates/allOutAttackChooser.hbs
+++ b/src/templates/allOutAttackChooser.hbs
@@ -1,5 +1,5 @@
 <div>
-  <div>Escoge tu defensa total para este turno.</div>
+  <div>Escoge tu maniobra para este turno.</div>
   {{> choiceTable}}
   <div class="clickable" id="closeAndReturn">Volver a escoger maniobra</div>
 </div>
