--- a/src/templates/attackChooser.hbs
+++ b/src/templates/attackChooser.hbs
@@ -13,4 +13,5 @@
   {{> choiceTable ranged}}
 
   {{> choiceTable hitLocations}}
+  <div class="clickable" id="closeAndReturn">Volver a escoger maniobra</div>
 </div>
