--- a/src/templates/evaluate.hbs
+++ b/src/templates/evaluate.hbs
@@ -1,4 +1,6 @@
 <div>
-  <div>Choose your the weapon you are aiming with (you must have a target selected)</div>
+  <div>Elige un arma con la que evaluar a tu oponente (tienes que tenerle seleccionado)</div>
   {{> choiceTable}}
+  <div class="clickable" id="closeAndReturn">Volver a escoger maniobra</div>
+
 </div>
