--- a/templates/feint.hbs
+++ b/templates/feint.hbs
@@ -1,4 +1,4 @@
 <div>
-  <div>Choose your the weapon you are making feint with (you must have a target selected)</div>
+  <div>Elige el arma con (you must have a target selected)</div>
   {{> choiceTable}}
 </div>
