--- a/src/templates/aim.hbs
+++ b/src/templates/aim.hbs
@@ -1,4 +1,5 @@
 <div>
-  <div>Choose your the weapon you are aiming with (you must have a target selected)</div>
+  <div>Elige un arma con la que estás apuntando (debes tener un objetivo seleccionado)</div>
   {{> choiceTable}}
+  <div class="clickable" id="closeAndReturn">Volver a escoger maniobra</div>
 </div>
