--- a/src/templates/feint.hbs
+++ b/src/templates/feint.hbs
@@ -1,4 +1,6 @@
 <div>
-  <div>Choose your the weapon you are making feint with (you must have a target selected)</div>
+  <div>Elige el arma con el que estás haciendo una finta (tienes que tener seleccionado un objetivo)</div>
   {{> choiceTable}}
+  <div class="clickable" id="closeAndReturn">Volver a escoger maniobra</div>
+
 </div>
