--- a/src/templates/postureChooser.hbs
+++ b/src/templates/postureChooser.hbs
@@ -1,5 +1,5 @@
 <div>
-  <div>Escoge tu defensa total para este turno.</div>
-  {{> choiceTable}}
+  <div>Escoge una postura para cambiar</div>
+  {{> choiceTable posture}}
   <div class="clickable" id="closeAndReturn">Volver a escoger maniobra</div>
 </div>
