--- a/src/templates/maneuverChooser.hbs
+++ b/src/templates/maneuverChooser.hbs
@@ -1,4 +1,8 @@
 <div>
   <div>Escoge tu maniobra para este turno.</div>
-  {{> choiceTable}}
+  <br/>
+  <h2>Maniobras básicas</h2>
+  {{> choiceTable basicManeuver}}
+  <h2>Maniobras avanzadas</h2>
+  {{> choiceTable advancedManeuver}}
 </div>
