--- a/src/templates/allOutDefense.hbs
+++ b/src/templates/allOutDefense.hbs
@@ -1,5 +1,5 @@
 <div>
   <div>Escoge tu defensa total para este turno.</div>
-  {{> choiceTable}}
+  {{> choiceTable basic }}
   <div class="clickable" id="closeAndReturn">Volver a escoger maniobra</div>
 </div>
