--- a/src/templates/attackChooser.hbs
+++ b/src/templates/attackChooser.hbs
@@ -1,4 +1,8 @@
 <style>
+  table .selected {
+    background: #333 !important;
+    color: #fff !important;
+  }
   .container {
     display: grid;
     grid-template-columns: 2fr 1fr;
