Add go prone in dodge

--- a/src/templates/defenseChooser.hbs
+++ b/src/templates/defenseChooser.hbs
@@ -7,6 +7,9 @@
       <td>Retrocedes un paso para ganar +3 a Esquivar (o un +1 a Parar y Bloquear). Tendrás un -2 al Ataque en el
         próximo turno
       </td>
+      <td><input type="checkbox" id="prone" />Tirarse al suelo</td>
+      <td>Te tiras al suelo y ganas un +3 a Esquivar (pero acabas tumbado). Útil en ataques a distancia
+      </td>
     </tr>
   </table>
   {{#if canDodge}}
