--- a/src/templates/attackChooser.hbs
+++ b/src/templates/attackChooser.hbs
@@ -36,7 +36,7 @@
     {{#if weaponsToBeReady.items.length}}
       <br>
       {{#if beforeCombat}}
-          <h2>Armas que tenías equipadas ANTES DEL COMBATE</h2>
+          <h2>Armas a equipar antes del combate</h2>
       {{else}}
           <h2>Armas que tienes que equipar antes de atacar con ellas</h2>
       {{/if}}
@@ -44,7 +44,7 @@
     {{/if}}
     {{#if weaponsNotToBeReady.items.length}}
       <br>
-      <h2>Armas ya equipadas</h2>
+      <h2>Armas equipadas</h2>
       {{> choiceTable weaponsNotToBeReady}}
     {{/if}}
   {{else}}
