So many stuff I cannot count them

--- a/src/templates/defenseChooser.hbs
+++ b/src/templates/defenseChooser.hbs
@@ -3,6 +3,9 @@
 
   <table>
     <tr>
+      <td><input type="checkbox" id="feverishDefense" />Defensa desesperada</td>
+      <td>Gastas un punto de fatiga para ganar un +2 en la defensa que escojas
+      </td>
       <td><input type="checkbox" id="retreat" />Retroceder</td>
       <td>Retrocedes un paso para ganar +3 a Esquivar (o un +1 a Parar y Bloquear). Tendrás un -2 al Ataque en el
         próximo turno
