--- a/src/styles/gurps-easy-combat.css
+++ b/src/styles/gurps-easy-combat.css
@@ -72,3 +72,15 @@ table .selected {
 .card-bottom {
   border-top: 1px solid var(--color-underline-header);
 }
+
+.levelWithModifiers {
+  color: #800000
+}
+
+.level {
+  display: none
+}
+
+.header_level {
+  display: none
+}
