--- a/src/templates/attackChooser.hbs
+++ b/src/templates/attackChooser.hbs
@@ -36,9 +36,9 @@
     {{#if weaponsToBeReady.items.length}}
       <br>
       {{#if beforeCombat}}
-          <h2>Armas a equipar antes del combate</h2>
+          <h2>Armas sin equipar</h2>
       {{else}}
-          <h2>Armas que tienes que equipar antes de atacar con ellas</h2>
+          <h2>Armas sin equipar</h2>
       {{/if}}
       {{> choiceTable weaponsToBeReady}}
     {{/if}}
@@ -48,7 +48,20 @@
       {{> choiceTable weaponsNotToBeReady}}
     {{/if}}
   {{else}}
+
+    {{#ifEquals maneuver "move_and_attack"}}
+    <div class="nostyles">
+      <td><input type="checkbox" id="fatigueMoveAndAttack" />Gastar fatiga</td>
+      <td>Gastas uno de fatiga para poder mover y atacar sin el penalizador</td>
+    </div>
+    {{/ifEquals}}
+
+
     {{#if melee.items.length}}
+      <div class="nostyles">
+        <td><input type="checkbox" id="fatigueMightyBlows" />Golpe poderoso</td>
+        <td>Gastas uno de fatiga para hacer un +2 al daño</td>
+      </div>
       <br>
       <h2>Cuerpo a cuerpo</h2>
       {{> choiceTable melee}}
