Add locations in the attack template, and fix errors in allout attack double

--- a/src/styles/gurps-easy-combat-ludo.css
+++ b/src/styles/gurps-easy-combat-ludo.css
@@ -67,7 +67,20 @@
   border-top: 1px solid var(--color-underline-header);
 }
 
+.location {
+  color: #800000;
+}
+
+.level {
+  display: none;
+}
 
 .levelWithModifiers {
   color: #800000
+}
+
+
+.location_layer {
+  margin-top: 5px;
+  font-size: 1.5em;
 }
