--- a/src/styles/gurps-easy-combat.css
+++ b/src/styles/gurps-easy-combat.css
@@ -27,11 +27,6 @@
   color: #fff;
 }
 
-table .selected {
-  background: #333; !important;
-  color: #fff; !important;
-}
-
 .card-container {
   border: 1px solid #ccc;
   background-color: #f4f4f4;
@@ -63,7 +58,6 @@ table .selected {
   display: inline-block;
 }
 
-
 .card-title {
   font-size: 1.5em;
   border-bottom: 1px solid var(--color-underline-header);
@@ -73,15 +67,20 @@ table .selected {
   border-top: 1px solid var(--color-underline-header);
 }
 
+.location {
+  color: #800000;
+}
+
+.level {
+  display: none;
+}
+
 .levelWithModifiers {
   color: #800000
 }
 
-.level {
-  display: none
-}
 
-.header_level {
-  display: none
+.location_layer {
+  margin-top: 5px;
+  font-size: 1.5em;
 }
-
