--- a/src/templates/attackChooser.hbs
+++ b/src/templates/attackChooser.hbs
@@ -74,6 +74,18 @@
       </div>
     {{/ifEquals}}
 
+    {{#unless beforeCombat}}
+      <div class="location_layer">
+        <table>
+          <tr>
+            <td>Zona a atacar: <span class="location" id="chooseLocation">{{data.locationToAttack.where}}</span> </td>
+            <td>Penalizador: <span class="location">{{data.locationToAttack.penalty}}</span> </td>
+            <td>Resistencia: <span class="location">{{data.locationToAttack.dr}}</span> </div></td>
+          </tr>
+        </table>
+      </div>
+    {{/unless}}
+
 
     {{#if melee.items.length}}
       <br>
@@ -99,14 +111,6 @@
     <br>
 
     <h2>Maniobras de combate avanzadas</h2>
-    <br>
-    <details>
-      <summary><strong>Escoger una localización a atacar</strong></summary>
-      <div>
-        {{> choiceTable hitLocations}}
-      </div>
-    </details>
-
     {{#if disarmAttack.items.length}}
       <br>
       <details>
