--- a/src/templates/attackChooser.hbs
+++ b/src/templates/attackChooser.hbs
@@ -78,9 +78,9 @@
       <div class="location_layer">
         <table>
           <tr>
-            <td>Zona a atacar: <span class="location" id="chooseLocation">{{data.locationToAttack.where}}</span> </td>
+            <td>Zona a atacar: <span class="location" id="chooseLocation">{{i18nHitLocation data.locationToAttack.where}}</span> </td>
             <td>Penalizador: <span class="location">{{data.locationToAttack.penalty}}</span> </td>
-            <td>Resistencia: <span class="location">{{data.locationToAttack.dr}}</span> </div></td>
+            <td>Resistencia: <span class="location">{{data.locationToAttack.dr}}</span></td>
           </tr>
         </table>
       </div>
