--- a/src/templates/defenseChooser.hbs
+++ b/src/templates/defenseChooser.hbs
@@ -54,7 +54,7 @@
             {{ acrobaticDodge.level }}
           </td>
           <td>
-            Se tirará primero Acrobacias, si la sacas ganas un +2 a Esquiva, si fallas pierdes un -2 a Esquiva
+            Se tirará Acrobacias, con un éxito +2 a Esquiva, con un fallo -2 a Esquiva
           </td>
         </tr>
       {{/if}}
@@ -68,7 +68,7 @@
     {{/if}}
   {{/if}}
   {{#if canBlock}}
-    {{#if block.length}}
+    {{#if block}}
       <h2>Bloqueo</h2>
       <table>
         <tr class="header">
