--- a/src/templates/defenseChooser.hbs
+++ b/src/templates/defenseChooser.hbs
@@ -62,7 +62,7 @@
   {{/if}}
 
   {{#if canParry}}
-    {{#if parries}}
+    {{#if parries.length}}
       <h2>Parada</h2>
       {{> choiceTable parries}}
     {{/if}}
