Remove close button

--- a/src/templates/defenseChooser.hbs
+++ b/src/templates/defenseChooser.hbs
@@ -22,7 +22,7 @@
   <br>
   <div class="nostyles">
     <label>
-      <input type="checkbox" id="feverishDefense" class="onlyOne"/>Gastas un punto de fatiga para ganar un +2 en la defensa que escojas
+      <input type="checkbox" id="feverishDefense"/>Gastas un punto de fatiga para ganar un +2 en la defensa que escojas
     </label>
   </div>
   <div class="nostyles">
