--- a/src/templates/defenseChooser.hbs
+++ b/src/templates/defenseChooser.hbs
@@ -21,7 +21,7 @@
   <div>¡Te están atacando! Escoge tu defensa!</div>
   <br>
   <div class="nostyles">
-    <label>2
+    <label>
       <input type="checkbox" id="feverishDefense" {{ checked data.feverishDefense}}/>Gastas un punto de fatiga para ganar un +2 en la defensa que escojas
     </label>
   </div>
